# hackathon

./: .dockerignore  run.sh
wiz-mcp/: .env  Dockerfile  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  cloudbuild.yaml  deploy_wiz_mcp.py  pyproject.toml  requirements-dev.txt  requirements.txt  tool.yaml
wiz-mcp/docs/: creating_tools.md  output_transformation.md  testing_output_transformation.md
wiz-mcp/examples/: README.md  execute_wiz_query_compact_payload.yaml  execute_wiz_query_json_payload.yaml  execute_wiz_query_payload.yaml  get_threats_payload.yaml  output_transformation.yaml  text_to_wiz_query_payload.yaml  wiz_search_no_transform.yaml  wiz_search_payload.yaml  wiz_search_with_transform.yaml
wiz-mcp/examples/tool_examples/: get_kubernetes_clusters.yaml  get_kubernetes_clusters_payload.yaml
wiz-mcp/src/wiz_mcp_server/: cli.py  mcp-server.py  payload.yaml  server.py  server2.py  server4.py  version.py
wiz-mcp/src/wiz_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wiz-mcp/src/wiz_mcp_server/auth/: __init__.py  auth.py
wiz-mcp/src/wiz_mcp_server/resources/: __init__.py
wiz-mcp/src/wiz_mcp_server/tools/: __init__.py  dynamic_tools.py  example_tool.py  execute_tool.py  fetch_tools.py  load_definitions.py  local_tool_definition_loader.py  remote_tool_definition_loader.py  tool_cache.py  tool_definition_classes.py  tool_definition_loader.py  tool_definition_utils.py  wiz_search_tool.py
wiz-mcp/src/wiz_mcp_server/utils/: __init__.py  context.py  context_parameters.py  graphql_client.py  logger.py  result_utils.py  (+3 more)
(+22 files in other folders)
